--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
-.terraform
+#  Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
 *.tfstate
-*.tfstate.backup
+*.tfstate.*
+
+# .tfvars files
+*.tfvars
+.DS_Store
 makefile
