--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,2 @@
-#  Local .terraform directories
-**/.terraform/*
-
-# .tfstate files
-*.tfstate
-*.tfstate.*
-
-# .tfvars files
-*.tfvars
-.DS_Store
+.terraform
 makefile
